fix: temporarily disabling lint precommit hook

--- a/packages/ui-toolkit/01-settings/settings-colors/index.scss
+++ b/packages/ui-toolkit/01-settings/settings-colors/index.scss
@@ -4,7 +4,7 @@
 
 /* These are not up to date. */
 
-$bolt-palettes: (
+$bolt-colors: (
   indigo: (
     xlight:  hsl(233, 100%, 90%), //#CCD2FF
     light:   hsl(233, 43%, 35%),  //#333C80
