--- a/packages/ui-toolkit/01-settings/settings-global/index.scss
+++ b/packages/ui-toolkit/01-settings/settings-global/index.scss
@@ -3,5 +3,5 @@
 \* ------------------------------------ */
 
 // Async font loading classes
-$bolt-fonts-subset-loaded-class: 'js-fonts-subset-loaded' !default;
-$bolt-fonts-loaded-class: 'js-fonts-loaded' !default;
+$bolt-fonts--subset-loaded-class: 'js-fonts-subset-loaded' !default;
+$bolt-fonts--loaded-class: 'js-fonts-loaded' !default;
