--- a/packages/ui-toolkit/02-tools/tools-font-kerning/index.scss
+++ b/packages/ui-toolkit/02-tools/tools-font-kerning/index.scss
@@ -9,7 +9,7 @@
 
 
 /// This applies default font kerning styles for supporting browsers.
-@mixin font-kerning() {
+@mixin bolt-font-kerning() {
   font-feature-settings: 'kern';
   font-kerning: normal; // Safari 7+, Firefox 24+, Chrome 33(?)
 }
