--- a/packages/ui-toolkit/04-elements/elements-all/index.scss
+++ b/packages/ui-toolkit/04-elements/elements-all/index.scss
@@ -1,3 +1,5 @@
 @import '@bolt/elements-headings';
-@import '@bolt/elements-page';
 @import '@bolt/elements-links';
+@import '@bolt/elements-page';
+@import '@bolt/elements-small';
+@import '@bolt/elements-tables';
