--- a/packages/ui-toolkit/08-utilities/utilities-spacing/index.scss
+++ b/packages/ui-toolkit/08-utilities/utilities-spacing/index.scss
@@ -12,7 +12,7 @@
           $sizeText: '-' + $size;
         }
 
-        .u-#{$property}#{$direction}#{$sizeText}#{$type} {
+        .u-bolt-#{$property}#{$direction}#{$sizeText}#{$type} {
 
           $sizes: null null null null;
 
