--- a/packages/website-jekyll/source/_layouts/home.html
+++ b/packages/website-jekyll/source/_layouts/home.html
@@ -4,8 +4,8 @@ layout: default
 
 
 
-  <div class="c-site__content c-site__content--middle"><!-- vertically center -->
-    <div class="o-wrapper">
+  <div class="c-bolt-site__content c-bolt-site__content--middle"><!-- vertically center -->
+    <div class="o-bolt-wrapper">
       <main>
         <article>
           {{ content }}
@@ -13,8 +13,8 @@ layout: default
       </main>
     </div>
   </div>
-  <div class="c-site__footer c-page-footer">
-    <div class="o-wrapper">
+  <div class="c-bolt-site__footer c-bolt-page-footer">
+    <div class="o-bolt-wrapper">
         {% include footer.html %}
     </div>
   </div>
