--- a/packages/website-jekyll/source/_layouts/page.html
+++ b/packages/website-jekyll/source/_layouts/page.html
@@ -1,15 +1,17 @@
 ---
 layout: default
 ---
-<div class="o-layout o-layout--article">
+
+
+<div class="c-bolt-site__content">
   <aside>
-    <div class="c-nav c-nav--vertical">
+    <div class="c-boltsg-nav c-boltsg-nav--vertical">
       {% include doc-nav.html %}
     </div>
   </aside>
   <main>
-    <div class="o-layout--article__inset">
-      <article class="c-article">
+    <div class="">
+      <article class="c-boltsg-article">
         <header role="banner">
           <hgroup>
             <h1>
