--- a/packages/ui-toolkit/01-settings/settings-font-weight/index.scss
+++ b/packages/ui-toolkit/01-settings/settings-font-weight/index.scss
@@ -35,9 +35,8 @@ $bolt-font-weight--bold: 800 !default;
 $bolt-font-weights: (
   font-weights: (
     bold:     $bolt-font-weight--bold,
-    semibold: $bolt-font-weight--bold,
-    normal:   $bolt-font-weight--regular,
+    semibold: $bolt-font-weight--semibold,
     regular:  $bolt-font-weight--regular,
-    light:    $bolt-font-weight--regular
+    normal:  $bolt-font-weight--regular
   )
 ) !default;
