--- a/packages/ui-toolkit/02-tools/tools-font-family/index.scss
+++ b/packages/ui-toolkit/02-tools/tools-font-family/index.scss
@@ -18,19 +18,19 @@
 /// @param {string} $type
 ///   Defines the font-family being used for each type of text: heading, body, or code.
 ///
-@mixin font-family($type, $is_root: false) {
-  $fallback-font-family: map-get-deep($font-families, 'font-families', $type, 'system');
-  $custom-font-family: map-get-deep($font-families, 'font-families', $type, 'custom');
+@mixin bolt-font-family($type, $is_root: false) {
+  $fallback-font-family: map-get-deep($bolt-font-families, 'font-families', $type, 'fallback-font');
+  $custom-font-family: map-get-deep($bolt-font-families, 'font-families', $type, 'custom-font');
 
   font-family: $fallback-font-family;
 
   @if $is_root == false {
-    .#{$fonts-loaded-class} & {
+    .#{$bolt-fonts--loaded-class} & {
       font-family: $custom-font-family;
     }
   }
   @else {
-    &.#{$fonts-loaded-class} {
+    &.#{$bolt-fonts--loaded-class} {
       font-family: $custom-font-family;
     }
   }
