--- a/packages/ui-toolkit/02-tools/tools-spacing/_tools.spacing-margin.scss
+++ b/packages/ui-toolkit/02-tools/tools-spacing/_tools.spacing-margin.scss
@@ -1,27 +1,27 @@
-@mixin margin($sizes, $type: false, $important: false) {
+@mixin bolt-margin($sizes, $type: false, $important: false) {
   $sizes: _bolt-normalize-spacing-sizes($sizes, $type);
   @include _bolt-directional-property(margin, false, $sizes, $important);
 }
 
-@mixin margin-top($sizes, $important: null) {
+@mixin bolt-margin-top($sizes, $important: null) {
   $sizes: _bolt-normalize-spacing-sizes($sizes, null);
   $sizes: nth($sizes, 1) null null null;
   @include _bolt-directional-property(margin, false, $sizes, $important);
 }
 
-@mixin margin-right($sizes, $important: null) {
+@mixin bolt-margin-right($sizes, $important: null) {
   $sizes: _bolt-normalize-spacing-sizes($sizes, null);
   $sizes: null nth($sizes, 2) null null;
   @include _bolt-directional-property(margin, false, $sizes, $important);
 }
 
-@mixin margin-bottom($sizes, $important: null) {
+@mixin bolt-margin-bottom($sizes, $important: null) {
   $sizes: _bolt-normalize-spacing-sizes($sizes, null);
   $sizes: null null nth($sizes, 1) null;
   @include _bolt-directional-property(margin, false, $sizes, $important);
 }
 
-@mixin margin-left($sizes, $important: null) {
+@mixin bolt-margin-left($sizes, $important: null) {
   $sizes: _bolt-normalize-spacing-sizes($sizes, null);
   $sizes: null null null nth($sizes, 1);
   @include _bolt-directional-property(margin, false, $sizes, $important);
