--- a/packages/ui-toolkit/04-elements/elements-page/index.scss
+++ b/packages/ui-toolkit/04-elements/elements-page/index.scss
@@ -1,29 +1,30 @@
-/*------------------------------------*\
+/* ------------------------------------ *\
   Body and heading declaration
-\*------------------------------------*/
-$breakpoint--min: map-get($breakpoints, medium);
-$breakpoint--max: map-get($breakpoints, xlarge);
+\* ------------------------------------ */
+$bolt-breakpoint--min: map-get($bolt-breakpoints, medium);
+$bolt-breakpoint--max: map-get($bolt-breakpoints, xlarge);
+
 
 
 html {
   // Base type
-  font-size: $font-size--min-px;
+  font-size: $bolt-font-size--min;
 
   // Responsive type
   @include respond-to(medium) {
-    font-size: calc(#{$font-size--min-px} + (#{$font-size--max - $font-size--min} * (100vw - #{$breakpoint--min}) / #{strip-unit($breakpoint--max) - strip-unit($breakpoint--min)}));
+    font-size: calc(#{$bolt-font-size--min} + (#{$bolt-font-size--max - $bolt-font-size--min} * (100vw - #{$bolt-breakpoint--min}) / #{strip-unit($bolt-breakpoint--max) - strip-unit($bolt-breakpoint--min)}));
   }
 
   // Large type
   @include respond-to(xlarge) {
-    font-size: $font-size--max-px;
+    font-size: $bolt-font-size--max;
   }
 }
 
 body {
   width: 100%;
-  @include font-family(body);
-  @include font-size(medium);
+  @include bolt-font-family(body);
+  @include bolt-font-size(medium);
   // background-image: linear-gradient(to bottom,#0ff 0,rgba(255,255,255,0)1px);
   // background-repeat: repeat-y;
   // background-size: 100% 1rem;
