--- a/packages/ui-toolkit/04-elements/elements-tables/index.scss
+++ b/packages/ui-toolkit/04-elements/elements-tables/index.scss
@@ -1,3 +1,6 @@
+/* ------------------------------------ *\
+  Basic Table Elements
+\* ------------------------------------ */
 table {
   // @include null-spacing;
 
@@ -13,15 +16,15 @@ tfoot {
 
 th,
 td {
-  @include font-size(small);
+  @include bolt-font-size(small);
   // @include mm-padding(($font-leading--tight/2 + rem),($gutter/2 + rem),($font-leading--tight/2 + rem),($gutter/2 + rem));
   // @include text-align(left);
 }
 
 thead th,
 tfoot td {
-  @include font-family(heading);
-  @include font-weight(bold);
+  @include bolt-font-family(heading);
+  @include bolt-font-weight(bold);
 }
 
 td {
