--- a/packages/ui-toolkit/06-components/components-all/index.scss
+++ b/packages/ui-toolkit/06-components/components-all/index.scss
@@ -1,2 +1,4 @@
+@import '@bolt/components-page-intro';
+@import '@bolt/components-heading';
 @import '@bolt/components-site';
 @import '@bolt/components-page-footer';
