--- a/packages/ui-toolkit/bolt/bolt-styleguide.scss
+++ b/packages/ui-toolkit/bolt/bolt-styleguide.scss
@@ -1,3 +1,57 @@
+/* ------------------------------------ *\
+  Settings
+\* ------------------------------------ */
+@import '@bolt/settings-all';
+
+
+/* ------------------------------------ *\
+  Tools
+\* ------------------------------------ */
+@import '@bolt/tools-all';
+
+
+/* ------------------------------------ *\
+  Generic
+\* ------------------------------------ */
+@import '@bolt/generic-all';
+
+
+/* ------------------------------------ *\
+  Elements
+\* ------------------------------------ */
+@import '@bolt/elements-all';
+
+
+/* ------------------------------------ *\
+  Objects
+\* ------------------------------------ */
+@import '@bolt/objects-all';
+@import '@bolt/objects-sg-layout';
+
+
+/* ------------------------------------ *\
+  Components
+\* ------------------------------------ */
+@import '@bolt/components-all';
+@import '@bolt/components-page-intro';
+@import '@bolt/components-sg-article/index';
+@import '@bolt/components-sg-navigation/index';
+// @import '@bolt/components-sg-navigation';
+// @import '../06-components/components.headings.refactor';
+// @import '../06-components/components.article.refactor';
+
+/* ------------------------------------ *\
+  Themes
+\* ------------------------------------ */
+@import '@bolt/themes-all';
+
+
+/* ------------------------------------ *\
+  Utilities
+\* ------------------------------------ */
+@import '@bolt/utilities-all';
+
+
 // /**
 //  * This stylesheet is for styles you want to include only when displaying demo
 //  * styles for grids, animations, color swatches, etc.
