--- a/packages/website-jekyll/source/_includes/head.html
+++ b/packages/website-jekyll/source/_includes/head.html
@@ -16,7 +16,7 @@
       <link rel="stylesheet" href="/styles/{{ stylesheet }}.css" media="screen" type="text/css">
     {% endfor %}
   {% else %}
-    <link rel="stylesheet" href="{{ "/styles/bolt.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/styles/bolt-styleguide.css" | relative_url }}">
   {% endif %}
 
   {% if jekyll.environment == 'production' and site.google_analytics %}
